[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/GUI/BaseButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GUI/UpgradePopupMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/GUI/PriceTag.tscn" type="PackedScene" id=4]

[node name="UpgradePopupMenu" type="Panel"]
self_modulate = Color( 0, 0, 0, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -250.0
margin_right = 450.0
margin_bottom = 250.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmorUpgrade" parent="." instance=ExtResource( 1 )]
margin_left = 10.0
margin_top = 20.0
margin_right = 110.0
margin_bottom = 120.0
cooldown = 1.0
texture_path = "res://assets/icons/armor_plus.png"
desciption = "Health+1"

[node name="PriceTag" parent="ArmorUpgrade" instance=ExtResource( 4 )]
margin_right = 69.0
margin_bottom = 43.0
text = "50"

[node name="FireUpgrade" parent="." instance=ExtResource( 1 )]
margin_left = 10.0
margin_top = 140.0
cooldown = 1.0
texture_path = "res://assets/icons/cannon_shot_plus.png"
desciption = "Damage+1"
cost = 200

[node name="PriceTag" parent="FireUpgrade" instance=ExtResource( 4 )]
margin_right = 69.0
margin_bottom = 43.0
text = "200"

[node name="SpeedUpgrade" parent="." instance=ExtResource( 1 )]
margin_left = 10.0
margin_top = 260.0
margin_right = 110.0
margin_bottom = 360.0
texture_path = "res://assets/icons/sail_plus.png"
desciption = "Speed+1"

[node name="PriceTag" parent="SpeedUpgrade" instance=ExtResource( 4 )]
margin_right = 53.0
margin_bottom = 43.0
text = "200"

[node name="Toolbar" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="Toolbar" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_top = 5.0
margin_right = 60.0
rect_scale = Vector2( 0.3, 0.3 )
cooldown = 0.0
texture_path = "res://assets/gui/clip.png"
show_desc_on_hover = false
cost = 0
[connection signal="button_pressed" from="ArmorUpgrade" to="." method="_on_ArmorUpgrade_button_pressed"]
[connection signal="button_pressed" from="FireUpgrade" to="." method="_on_FireUpgrade_button_pressed"]
[connection signal="button_pressed" from="SpeedUpgrade" to="." method="_on_SpeedUpgrade_button_pressed"]
[connection signal="button_pressed" from="Toolbar/CloseButton" to="." method="_on_CloseButton_button_pressed"]
